--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "election",
-  "version": "1.0.0",
+  "version": "0.1.0",
   "description": "",
   "main": "truffle.js",
   "directories": {
@@ -10,11 +10,11 @@
     "dev": "lite-server",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
-  "license": "ISC",
+  "author": "Offchain Labs, Inc.",
+  "license": "Apache-2.0",
   "devDependencies": {
-    "lite-server": "^2.3.0",
-    "truffle": "5.0.0-beta.0"
+    "lite-server": "^2.5.2",
+    "truffle": "5.0.20"
   },
   "dependencies": {
     "arb-truffle-provider": "https://github.com/OffchainLabs/arb-truffle-provider.git"
