--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "license": "Apache-2.0",
   "devDependencies": {
     "lite-server": "^2.5.2",
-    "truffle": "5.0.20"
+    "truffle": "^5.0.20"
   },
   "dependencies": {
     "arb-truffle-provider": "https://github.com/OffchainLabs/arb-truffle-provider.git"
