--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
-node_modules
 *.ao
-compiled.json
-build
-arb-docker-compose.yml
-compose
-validator-states
 .DS_Store
+build
+compiled.json
+compose
+docker-compose.arb-deploy.yml
+node_modules
+validator-states
