--- a/package.json
+++ b/package.json
@@ -1,27 +1,34 @@
 {
   "name": "election",
-  "version": "0.1.0",
-  "description": "",
+  "version": "0.2.0",
+  "description": "Election demo dApp",
+  "author": "Offchain Labs, Inc.",
+  "license": "Apache-2.0",
+  "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack",
     "start": "webpack-dev-server --open",
     "dev": "webpack-dev-server --open",
     "watch": "webpack --watch"
   },
-  "author": "Offchain Labs, Inc.",
-  "license": "Apache-2.0",
   "devDependencies": {
-    "lite-server": "^2.5.2",
-    "truffle": "^5.0.20",
-    "webpack": "^4.35.2",
-    "webpack-cli": "^3.3.5",
-    "webpack-dev-server": "^3.7.2"
+    "css-loader": "^3.4.2",
+    "file-loader": "^6.0.0",
+    "style-loader": "^1.1.3",
+    "svg-inline-loader": "^0.8.0",
+    "truffle": "^5.1.11",
+    "webpack": "^4.41.5",
+    "webpack-cli": "~3.3.10",
+    "webpack-dev-server": "~3.11.0"
   },
   "dependencies": {
-    "arb-truffle-provider": "https://github.com/OffchainLabs/arb-truffle-provider.git",
-    "arb-web3-provider": "https://github.com/offchainlabs/arb-web3-provider",
-    "truffle-contract": "1.1.11",
-    "web3": "0.20"
+    "arb-provider-ethers": "^0.6.5",
+    "arb-provider-truffle": "^0.6.5",
+    "bootstrap": "4.5.0",
+    "ethers": "4.0.47",
+    "jquery": "^3.5.0"
+  },
+  "workspaces": {
+    "nohoist": []
   }
 }
