--- a/package.json
+++ b/package.json
@@ -12,20 +12,19 @@
     "watch": "webpack --watch"
   },
   "devDependencies": {
+    "arb-ethers-web3-bridge": "^0.7.3",
     "css-loader": "^3.4.2",
-    "file-loader": "^6.0.0",
+    "file-loader": "^5.0.2",
     "style-loader": "^1.1.3",
     "svg-inline-loader": "^0.8.0",
     "truffle": "^5.1.11",
     "webpack": "^4.41.5",
     "webpack-cli": "~3.3.10",
-    "webpack-dev-server": "~3.11.0"
+    "webpack-dev-server": "~3.10.2"
   },
   "dependencies": {
-    "arb-provider-ethers": "^0.6.5",
-    "arb-provider-truffle": "^0.6.5",
-    "bootstrap": "4.5.0",
-    "ethers": "4.0.47",
+    "bootstrap": "4.4.1",
+    "ethers": "4.0.44",
     "jquery": "^3.5.0"
   },
   "workspaces": {
